[package]
name = "abci"
version = "0.5.3"
authors = ["Adrian Brink <adrian@brink-holdings.com>", "Jackson Lewis <st.japa6@gmail.com>", "Dave Bryson", "Tomas Tauber"]
license = "MIT/Apache-2.0"
description = "Tendermint ABCI server for Rust"
homepage = "https://tendermint.com/docs/guides/app-development"
repository = "https://github.com/tendermint/rust-abci"
keywords = ["abci", "tendermint", "blockchain", "rust"]
readme = "README.md"
include = ["src/**/*", "Cargo.toml"]

[dependencies]
bytes = "0.4"
protobuf = "2.2.0"
byteorder = "1.2.7"
integer-encoding = "1.0.5"
mockstream = "0.0.3"
log = "0.4.6"
env_logger = "0.6.1"
tokio = "0.1"
futures = "0.1"

[build-dependencies]
protobuf-codegen-pure = "2.2.0"
