[package]
name = "abci"
version = "0.6.2"
authors = ["Adrian Brink <adrian@brink-holdings.com>", "Jackson Lewis <st.japa6@gmail.com>", "Dave Bryson", "Tomas Tauber"]
edition = "2018"
license = "MIT/Apache-2.0"
description = "Tendermint ABCI server for Rust"
homepage = "https://tendermint.com/docs/spec/abci/"
repository = "https://github.com/tendermint/rust-abci"
keywords = ["abci", "tendermint", "blockchain", "rust"]
readme = "README.md"
include = ["src/**/*", "Cargo.toml"]

[dependencies]
bytes = "0.4"
protobuf = "2.8.1"
byteorder = "1.3.2"
integer-encoding = "1.0.5"
log = "0.4.8"
env_logger = "0.7.0"
tokio = { version = "0.1", default-features = false, features = ["codec", "io", "tcp", "rt-full"] }
futures = "0.3"

[build-dependencies]
protobuf-codegen-pure = "2.8.1"
