[package]
name = "abci"
version = "0.7.2"
authors = ["Adrian Brink <adrian@brink-holdings.com>", "Jackson Lewis <st.japa6@gmail.com>", "Dave Bryson", "Tomas Tauber"]
edition = "2018"
license = "MIT/Apache-2.0"
description = "Tendermint ABCI server for Rust"
homepage = "https://tendermint.com/docs/spec/abci/"
repository = "https://github.com/tendermint/rust-abci"
keywords = ["abci", "tendermint", "blockchain", "rust"]
readme = "README.md"
include = ["src/**/*", "Cargo.toml"]

[dependencies]
bytes = "1.0"
protobuf = "= 2.16.2"
byteorder = "1.3.4"
integer-encoding = "1.1.5"
log = "0.4.8"
env_logger = "0.8.2"
tokio = { version = "0.2", features = ["tcp", "rt-core", "io-driver", "sync"] }
tokio-util = { version = "0.3.1", features = ["codec"] }
futures = "0.3"

[build-dependencies]
protobuf-codegen-pure = "= 2.16.2"
